fix config parse issues

--- a/test_assets/config.toml
+++ b/test_assets/config.toml
@@ -1,10 +1,6 @@
 
 [all]
-type-in-prefixes = [
-  "CLI:",
-  "File:"
-  "Acronym:"
-]
+type_in_prefixes = [ "CLI:", "File:", "Acronym:" ]
 
 [[decks]]
 id = 12345
