--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.80"
-clap = "4.5.1"
+clap = { version = "4.5.1", features = ["derive"] }
+expanduser = "1.2.2"
 genanki-rs = "0.4.0"
+glob = "0.3.1"
 itertools = "0.12.1"
 lazy_static = "1.4.0"
 markdown = "1.0.0-alpha.16"
 regex = "1.10.3"
+sanitize-filename = "0.5.0"
 scraper = "0.19.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_derive = "1.0.197"
